@@ -23,9 +23,6 @@ import java.util.Map;
 import java.util.Set;
 import javax.jcr.security.AccessControlManager;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.commons.PathUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.security.authorization.composite.CompositeAuthorizationConfiguration;
@@ -188,7 +185,7 @@ public class CugConfigurationTest extends AbstractCugTest {
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, "/content");
         CugConfiguration cc = createConfiguration(params);
 
-        List<Principal> excluded = ImmutableList.of(
+        List<Principal> excluded = List.of(
                 SystemPrincipal.INSTANCE,
                 (AdminPrincipal) () -> "admin",
                 (SystemUserPrincipal) () -> "systemUser");
@@ -204,7 +201,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     @Test
     public void testActivate() {
         CugConfiguration cugConfiguration = createConfiguration(ConfigurationParameters.EMPTY);
-        cugConfiguration.activate(ImmutableMap.of(
+        cugConfiguration.activate(Map.of(
                 CugConstants.PARAM_CUG_ENABLED, false,
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, new String[] {"/content", "/anotherContent"}
         ));
@@ -221,7 +218,7 @@ public class CugConfigurationTest extends AbstractCugTest {
     }
 
     private static void assertSupportedPaths(@NotNull CugConfiguration configuration, @NotNull String... paths) {
-        Set<String> expected = ImmutableSet.copyOf(paths);
+        Set<String> expected = Set.of(paths);
         assertEquals(expected, configuration.getParameters().getConfigValue(CugConstants.PARAM_CUG_SUPPORTED_PATHS, Set.of()));
     }
 
