@@ -40,7 +40,6 @@ import org.apache.commons.lang3.reflect.FieldUtils;
 import org.apache.jackrabbit.api.JackrabbitSession;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.UserManager;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.jcr.delegate.SessionDelegate;
 import org.apache.jackrabbit.oak.security.authentication.token.TokenLoginModule;
 import org.apache.jackrabbit.oak.security.authentication.user.LoginModuleImpl;
@@ -197,7 +196,7 @@ public class CachedMembershipLoginTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 ExternalLoginModule.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of(
+                                Map.of(
                                         ExternalLoginModule.PARAM_SYNC_HANDLER_NAME, syncConfig.getName(),
                                         ExternalLoginModule.PARAM_IDP_NAME, idp.getName())),
                         new AppConfigurationEntry(
