@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.internal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlManager;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
@@ -878,9 +876,9 @@ public class SecurityProviderRegistrationTest extends AbstractSecurityTest {
     private void testMultipleServiceWithRanking(@NotNull String fieldName, @NotNull Object service1, @NotNull Object service2, @NotNull Object service3) throws Exception {
         context.registerService(SecurityProviderRegistration.class, registration, Map.of("requiredServicePids", new String[] {"s1", "s2", "s3"}));
 
-        context.registerInjectActivateService(service1, ImmutableMap.of(RegistrationConstants.OAK_SECURITY_NAME, "s1", Constants.SERVICE_RANKING, 50));
+        context.registerInjectActivateService(service1, Map.of(RegistrationConstants.OAK_SECURITY_NAME, "s1", Constants.SERVICE_RANKING, 50));
         context.registerInjectActivateService(service2, Map.of(RegistrationConstants.OAK_SECURITY_NAME, "s2"));
-        context.registerInjectActivateService(service3, ImmutableMap.of(RegistrationConstants.OAK_SECURITY_NAME, "s3", Constants.SERVICE_RANKING, 1));
+        context.registerInjectActivateService(service3, Map.of(RegistrationConstants.OAK_SECURITY_NAME, "s3", Constants.SERVICE_RANKING, 1));
 
         Field f = registration.getClass().getDeclaredField(fieldName);
         f.setAccessible(true);
@@ -888,7 +886,7 @@ public class SecurityProviderRegistrationTest extends AbstractSecurityTest {
         SortedMap m = (SortedMap) f.get(registration);
         assertEquals(3, m.size());
         Collection c = m.values();
-        assertTrue(Iterables.elementsEqual(ImmutableList.of(service2, service3, service1), c));
+        assertTrue(Iterables.elementsEqual(List.of(service2, service3, service1), c));
     }
 
     @Test
@@ -1009,11 +1007,11 @@ public class SecurityProviderRegistrationTest extends AbstractSecurityTest {
         registration.activate(context.bundleContext(), configWithRequiredServiceIds("f1", "f2", "ac1", "ac2"));
 
         AggregationFilter filter1 = mock(AggregationFilter.class, withSettings().defaultAnswer(invocationOnMock -> Boolean.FALSE));
-        ServiceRegistration sr1 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter1, new Hashtable(ImmutableMap.of(SERVICE_PID, "f1", SERVICE_RANKING, 100)));
+        ServiceRegistration sr1 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter1, new Hashtable(Map.of(SERVICE_PID, "f1", SERVICE_RANKING, 100)));
         registration.bindAggregationFilter(sr1.getReference(), filter1);
 
         AggregationFilter filter2 = mock(AggregationFilter.class, withSettings().defaultAnswer(invocationOnMock -> Boolean.FALSE));
-        ServiceRegistration sr2 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter2, new Hashtable(ImmutableMap.of(SERVICE_PID, "f2", SERVICE_RANKING, 200)));
+        ServiceRegistration sr2 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter2, new Hashtable(Map.of(SERVICE_PID, "f2", SERVICE_RANKING, 200)));
         registration.bindAggregationFilter(sr2.getReference(), filter2);
 
         AggregatedPermissionProvider pp = mock(AggregatedPermissionProvider.class);
@@ -1058,11 +1056,11 @@ public class SecurityProviderRegistrationTest extends AbstractSecurityTest {
         registration.activate(context.bundleContext(), configWithRequiredServiceIds("f1", "f2", "ac1", "ac2"));
 
         AggregationFilter filter1 = mock(AggregationFilter.class, withSettings().defaultAnswer(invocationOnMock -> Boolean.TRUE));
-        ServiceRegistration sr1 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter1, new Hashtable(ImmutableMap.of(SERVICE_PID, "f1", SERVICE_RANKING, 200)));
+        ServiceRegistration sr1 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter1, new Hashtable(Map.of(SERVICE_PID, "f1", SERVICE_RANKING, 200)));
         registration.bindAggregationFilter(sr1.getReference(), filter1);
 
         AggregationFilter filter2 = mock(AggregationFilter.class, withSettings().defaultAnswer(invocationOnMock -> Boolean.TRUE));
-        ServiceRegistration sr2 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter2, new Hashtable(ImmutableMap.of(SERVICE_PID, "f2", SERVICE_RANKING, 100)));
+        ServiceRegistration sr2 = context.bundleContext().registerService(AggregationFilter.class.getName(), filter2, new Hashtable(Map.of(SERVICE_PID, "f2", SERVICE_RANKING, 100)));
         registration.bindAggregationFilter(sr2.getReference(), filter2);
 
         AggregatedPermissionProvider pp = mock(AggregatedPermissionProvider.class);
@@ -1106,7 +1104,7 @@ public class SecurityProviderRegistrationTest extends AbstractSecurityTest {
         assertNull(context.getService(SecurityProvider.class));
 
         AuthorizationConfiguration mockConfiguration = mockConfiguration(AuthorizationConfiguration.class);
-        when(mockConfiguration.getMonitors(any(StatisticsProvider.class))).thenReturn(ImmutableList.of(new TestMonitor()));
+        when(mockConfiguration.getMonitors(any(StatisticsProvider.class))).thenReturn(List.of(new TestMonitor()));
 
         registration.bindAuthorizationConfiguration(mockConfiguration, Collections.singletonMap(SERVICE_PID, "customAuthorizationConfig"));
         SecurityProvider service = context.getService(SecurityProvider.class);
