@@ -23,12 +23,11 @@ import javax.jcr.RepositoryException;
 import javax.jcr.security.AccessControlException;
 import javax.jcr.security.Privilege;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.api.security.authorization.PrivilegeManager;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.namepath.impl.GlobalNameMapper;
 import org.apache.jackrabbit.oak.namepath.impl.LocalNameMapper;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
@@ -197,7 +196,7 @@ public class PrivilegeManagerImplTest extends AbstractSecurityTest {
         };
         nsRegistry.registerNamespace("ns", "http://jackrabbit.apache.org/oak/ns");
 
-        Map<String, String> localMapping = ImmutableMap.of(
+        Map<String, String> localMapping = Map.of(
                 "prefix", NamespaceRegistry.NAMESPACE_JCR,
                 "prefix2", "http://jackrabbit.apache.org/oak/ns");
 
@@ -218,7 +217,7 @@ public class PrivilegeManagerImplTest extends AbstractSecurityTest {
 
         Iterable<String> aggr = TreeUtil.getStrings(privTree, PrivilegeConstants.REP_AGGREGATES);
         assertNotNull(aggr);
-        assertEquals(Set.of("jcr:read", "jcr:write"), ImmutableSet.copyOf(aggr));
+        assertEquals(Set.of("jcr:read", "jcr:write"), CollectionUtils.toSet(aggr));
 
     }
 }
