@@ -25,16 +25,16 @@ import static org.apache.jackrabbit.JcrConstants.JCR_MIXINTYPES;
 import static org.apache.jackrabbit.JcrConstants.JCR_PRIMARYTYPE;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.StringJoiner;
 
 import javax.jcr.Value;
 import javax.jcr.observation.Event;
 
-import org.apache.jackrabbit.guava.common.base.MoreObjects;
-
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.observation.JackrabbitEvent;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.blob.BlobAccessProvider;
@@ -97,10 +97,10 @@ public class EventFactory {
             }
             @Override
             public Map<?, ?> getInfo() {
-                return ImmutableMap.builder()
-                        .putAll(createInfoMap(primaryType, mixinTypes))
-                        .put("afterValue", createValue(after))
-                        .build();
+                Map<Object, Object> builder = new HashMap<>();
+                builder.putAll(createInfoMap(primaryType, mixinTypes));
+                builder.put("afterValue", createValue(after));
+                return Collections.unmodifiableMap(builder);
             }
         };
     }
@@ -116,11 +116,11 @@ public class EventFactory {
             }
             @Override
             public Map<?, ?> getInfo() {
-                return ImmutableMap.builder()
-                        .putAll(createInfoMap(primaryType, mixinTypes))
-                        .put("beforeValue", createValue(before))
-                        .put("afterValue", createValue(after))
-                        .build();
+                Map<Object, Object> builder = new HashMap<>();
+                builder.putAll(createInfoMap(primaryType, mixinTypes));
+                builder.put("beforeValue", createValue(before));
+                builder.put("afterValue", createValue(after));
+                return Collections.unmodifiableMap(builder);
             }
         };
     }
@@ -135,10 +135,10 @@ public class EventFactory {
             }
             @Override
             public Map<?, ?> getInfo() {
-                return ImmutableMap.builder()
-                        .putAll(createInfoMap(primaryType, mixinTypes))
-                        .put("beforeValue", createValue(before))
-                        .build();
+                Map<Object, Object> builder = new HashMap<>();
+                builder.putAll(createInfoMap(primaryType, mixinTypes));
+                builder.put("beforeValue", createValue(before));
+                return Collections.unmodifiableMap(builder);
             }
         };
     }
@@ -191,11 +191,11 @@ public class EventFactory {
             }
             @Override
             public Map<?, ?> getInfo() {
-                return ImmutableMap.builder()
-                    .put("srcAbsPath", mapper.getJcrPath(sourcePath))
-                    .put("destAbsPath", getPath())
-                    .putAll(createInfoMap(primaryType, mixinTypes))
-                    .build();
+                Map<Object, Object> builder = new HashMap<>();
+                builder.put("srcAbsPath", mapper.getJcrPath(sourcePath));
+                builder.put("destAbsPath", getPath());
+                builder.putAll(createInfoMap(primaryType, mixinTypes));
+                return Collections.unmodifiableMap(builder);
             }
         };
     }
@@ -211,25 +211,25 @@ public class EventFactory {
             }
             @Override
             public Map<?, ?> getInfo() {
-                return ImmutableMap.builder()
-                    .put("srcChildRelPath", mapper.getJcrName(name))
-                    .put("destChildRelPath", mapper.getJcrName(destName))
-                    .putAll(createInfoMap(primaryType, mixinTypes))
-                    .build();
+                Map<Object, Object> builder = new HashMap<>();
+                builder.put("srcChildRelPath", mapper.getJcrName(name));
+                builder.put("destChildRelPath", mapper.getJcrName(destName));
+                builder.putAll(createInfoMap(primaryType, mixinTypes));
+                return Collections.unmodifiableMap(builder);
             }
         };
     }
 
     private Map<String, ?> createInfoMap(String primaryType, Iterable<String> mixinTypes) {
         if (isEmpty(mixinTypes)) {
-            return ImmutableMap.of(
+            return Map.of(
                     JCR_PRIMARYTYPE, mapper.getJcrName(primaryType));
         } else {
             List<String> jcrNames = new ArrayList<>();
             for (String name : mixinTypes) {
                 jcrNames.add(mapper.getJcrName(name));
             }
-            return ImmutableMap.of(
+            return Map.of(
                     JCR_PRIMARYTYPE, mapper.getJcrName(primaryType),
                     JCR_MIXINTYPES, toArray(jcrNames, String.class));
         }
@@ -327,15 +327,15 @@ public class EventFactory {
 
         @Override
         public String toString() {
-            return MoreObjects.toStringHelper("Event")
-                    .add("type", getType())
-                    .add("path", getPath())
-                    .add("identifier", getIdentifier())
-                    .add("info", getInfo())
-                    .add("userID", getUserID())
-                    .add("userData", getUserData())
-                    .add("date", getDate())
-                    .add("external", isExternal())
+            return new StringJoiner(", ", "Event [", "]")
+                    .add("type=" + getType())
+                    .add("path=" + getPath())
+                    .add("identifier=" + getIdentifier())
+                    .add("info=" + getInfo())
+                    .add("userID=" + getUserID())
+                    .add("userData=" + getUserData())
+                    .add("date=" + getDate())
+                    .add("external=" + isExternal())
                     .toString();
         }
 
