@@ -24,8 +24,6 @@ import javax.jcr.RepositoryException;
 import javax.jcr.Session;
 import javax.jcr.Value;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Query;
 import org.apache.jackrabbit.api.security.user.QueryBuilder;
@@ -44,8 +42,8 @@ public class RemappingTest extends AbstractUserTest {
     private Session session;
     private Authorizable authorizable;
 
-    private List<String> unmappedPaths = ImmutableList.of("uTest:property", "uTest:node/uTest:property2");
-    private List<String> mappedPaths = ImmutableList.of("my:property", "my:node/my:property2");
+    private List<String> unmappedPaths = List.of("uTest:property", "uTest:node/uTest:property2");
+    private List<String> mappedPaths = List.of("my:property", "my:node/my:property2");
     private Value nameValue;
 
     @Override
@@ -102,7 +100,7 @@ public class RemappingTest extends AbstractUserTest {
         superuser.save();
         session.refresh(false);
 
-        Map<String, String> m = ImmutableMap.of("prop", "true", "my:property", "value", "my:node/my:property2", "value");
+        Map<String, String> m = Map.of("prop", "true", "my:property", "value", "my:node/my:property2", "value");
         for (String relPath : m.keySet()) {
             String value = m.get(relPath);
             Iterator<Authorizable> result = getUserManager(session).findAuthorizables(relPath, value);
@@ -119,7 +117,7 @@ public class RemappingTest extends AbstractUserTest {
         superuser.save();
         session.refresh(false);
 
-        Map<String, String> m = ImmutableMap.of("my:property", "my:value", "my:node/my:property2", "my:value");
+        Map<String, String> m = Map.of("my:property", "my:value", "my:node/my:property2", "my:value");
         for (String relPath : m.keySet()) {
             String value = m.get(relPath);
             Iterator<Authorizable> result = getUserManager(session).findAuthorizables(relPath, value);
@@ -136,7 +134,7 @@ public class RemappingTest extends AbstractUserTest {
         superuser.save();
         session.refresh(false);
 
-        Map<String, String> m = ImmutableMap.of("my:property", "my:value", "my:node/my:property2", "my:value");
+        Map<String, String> m = Map.of("my:property", "my:value", "my:node/my:property2", "my:value");
         for (String relPath : m.keySet()) {
             String value = m.get(relPath);
             Iterator<Authorizable> result = getUserManager(session).findAuthorizables(relPath, value, UserManager.SEARCH_TYPE_USER);
