@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.restriction;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Root;
@@ -38,6 +36,7 @@ import javax.jcr.ValueFactory;
 import javax.jcr.security.AccessControlException;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -66,9 +65,9 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
     private static final String NAME_BOOLEAN = "boolean";
 
     private static final Restriction GLOB_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(REP_GLOB, "*"), false);
-    private static final Restriction NT_PREFIXES_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(REP_PREFIXES, ImmutableList.of(), Type.STRINGS), false);
+    private static final Restriction NT_PREFIXES_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(REP_PREFIXES, List.of(), Type.STRINGS), false);
     private static final Restriction MANDATORY_BOOLEAN_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(NAME_BOOLEAN, true, Type.BOOLEAN), true);
-    private static final Restriction LONGS_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(NAME_LONGS, ImmutableList.of(Long.MAX_VALUE), Type.LONGS), false);
+    private static final Restriction LONGS_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty(NAME_LONGS, List.of(Long.MAX_VALUE), Type.LONGS), false);
     private static final Restriction UNKNOWN_RESTRICTION = new RestrictionImpl(PropertyStates.createProperty("unknown", "string"), false);
 
     private final AbstractRestrictionProvider rp1 = spy(createRestrictionProvider(GLOB_RESTRICTION.getDefinition(), NT_PREFIXES_RESTRICTION.getDefinition()));
@@ -97,11 +96,11 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @NotNull
     private AbstractRestrictionProvider createRestrictionProvider(@Nullable RestrictionPattern pattern, @Nullable Restriction toRead, @NotNull RestrictionDefinition... supportedDefinitions) {
-        ImmutableMap.Builder<String, RestrictionDefinition> builder = ImmutableMap.builder();
+        Map<String, RestrictionDefinition> builder = new HashMap<>();
         for (RestrictionDefinition def : supportedDefinitions) {
             builder.put(def.getName(), def);
         }
-        return new AbstractRestrictionProvider(builder.build()) {
+        return new AbstractRestrictionProvider(Collections.unmodifiableMap(builder)) {
             @Override
             public @NotNull Set<Restriction> readRestrictions(@Nullable String oakPath, @NotNull Tree aceTree) {
                 if (toRead != null) {
@@ -187,7 +186,7 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @Test
     public void testCreateRestriction() throws Exception {
-        Map<String, Value> valid = ImmutableMap.of(
+        Map<String, Value> valid = Map.of(
                 NAME_BOOLEAN, vf.createValue(true),
                 NAME_LONGS, vf.createValue(10),
                 REP_GLOB, vf.createValue("*")
@@ -206,7 +205,7 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @Test
     public void testCreateInvalidRestriction() throws Exception {
-        Map<String, Value> invalid = ImmutableMap.of(
+        Map<String, Value> invalid = Map.of(
                 NAME_BOOLEAN, vf.createValue("wrong_type"),
                 REP_GLOB, vf.createValue(true)
         );
@@ -223,7 +222,7 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @Test
     public void testMvCreateRestriction() throws RepositoryException {
-        Map<String, Value[]> valid = ImmutableMap.of(
+        Map<String, Value[]> valid = Map.of(
                 NAME_LONGS, new Value[] {vf.createValue(100)},
                 REP_PREFIXES, new Value[] {vf.createValue("prefix"), vf.createValue("prefix2")}
         );
@@ -241,7 +240,7 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @Test
     public void testCreateInvalidMvRestriction() throws Exception {
-        Map<String, Value[]> invalid = ImmutableMap.of(
+        Map<String, Value[]> invalid = Map.of(
                 NAME_BOOLEAN, new Value[] {vf.createValue(true), vf.createValue(false)},
                 NAME_LONGS, new Value[] {vf.createValue("wrong_type")},
                 REP_PREFIXES, new Value[] {vf.createValue(true)}
@@ -300,7 +299,7 @@ public class CompositeRestrictionProviderTest implements AccessControlConstants 
 
     @Test(expected = AccessControlException.class)
     public void testValidateRestrictionsInvalidDefinition() throws Exception {
-        Restriction rWithInvalidDefinition = new RestrictionImpl(PropertyStates.createProperty(REP_GLOB, ImmutableList.of("str", "str2"), Type.STRINGS), false);
+        Restriction rWithInvalidDefinition = new RestrictionImpl(PropertyStates.createProperty(REP_GLOB, List.of("str", "str2"), Type.STRINGS), false);
         Tree aceTree = getAceTree(rWithInvalidDefinition, MANDATORY_BOOLEAN_RESTRICTION);
 
         RestrictionProvider rp = createRestrictionProvider(null, rWithInvalidDefinition, GLOB_RESTRICTION.getDefinition());
