@@ -37,14 +37,12 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Lock;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.apache.jackrabbit.guava.common.base.Stopwatch;
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.guava.common.io.Closeables;
 import org.apache.jackrabbit.guava.common.util.concurrent.AtomicDouble;
 import com.mongodb.Block;
@@ -122,7 +120,6 @@ import static java.util.concurrent.TimeUnit.NANOSECONDS;
 import static java.util.stream.Collectors.toList;
 import static org.apache.jackrabbit.guava.common.collect.Iterables.filter;
 import static org.apache.jackrabbit.guava.common.collect.Maps.filterKeys;
-import static org.apache.jackrabbit.guava.common.collect.Sets.difference;
 import static com.mongodb.client.model.Projections.include;
 import static java.lang.Integer.MAX_VALUE;
 import static java.util.Collections.emptyList;
@@ -329,10 +326,9 @@ public class MongoDocumentStore implements DocumentStore {
             status = new MongoStatus(connection, db.getName());
         }
         status.checkVersion();
-        metadata = ImmutableMap.<String,String>builder()
-                .put("type", "mongo")
-                .put("version", status.getVersion())
-                .build();
+        metadata = Map.of(
+                "type", "mongo",
+                "version", status.getVersion());
 
         this.nodeNameLimit = MongoUtils.getNodeNameLimit(status);
         this.connection = new MongoDBConnection(connection, db, status, builder.getMongoClock());
@@ -1368,9 +1364,9 @@ public class MongoDocumentStore implements DocumentStore {
                     input -> input.getId()));
         } finally {
             stats.doneCreateOrUpdate(watch.elapsed(TimeUnit.NANOSECONDS),
-                    collection, Lists.transform(updateOps, input -> input.getId()));
+                    collection, updateOps.stream().map(UpdateOp::getId).collect(Collectors.toList()));
         }
-        List<T> resultList = new ArrayList<T>(results.values());
+        List<T> resultList = new ArrayList<>(results.values());
         log("createOrUpdate returns", resultList);
         return resultList;
     }
@@ -1390,7 +1386,7 @@ public class MongoDocumentStore implements DocumentStore {
     private <T extends Document> Map<UpdateOp, T> bulkModify(final Collection<T> collection, final List<UpdateOp> updateOps,
                                                              final Map<String, T> oldDocs) {
         Map<String, UpdateOp> bulkOperations = createMap(updateOps);
-        Set<String> lackingDocs = difference(bulkOperations.keySet(), oldDocs.keySet());
+        Set<String> lackingDocs = CollectionUtils.difference(bulkOperations.keySet(), oldDocs.keySet());
         oldDocs.putAll(findDocuments(collection, lackingDocs));
 
         CacheChangesTracker tracker = null;
@@ -1400,7 +1396,7 @@ public class MongoDocumentStore implements DocumentStore {
 
         try {
             final BulkRequestResult bulkResult = sendBulkRequest(collection, bulkOperations.values(), oldDocs, false);
-            final Set<String> potentiallyUpdatedDocsSet = difference(bulkOperations.keySet(), bulkResult.failedUpdates);
+            final Set<String> potentiallyUpdatedDocsSet = CollectionUtils.difference(bulkOperations.keySet(), bulkResult.failedUpdates);
 
             final Map<String, T> updatedDocsMap = new HashMap<>(potentiallyUpdatedDocsSet.size());
 
@@ -1478,7 +1474,7 @@ public class MongoDocumentStore implements DocumentStore {
                                                              List<UpdateOp> updateOperations,
                                                              Map<String, T> oldDocs) {
         Map<String, UpdateOp> bulkOperations = createMap(updateOperations);
-        Set<String> lackingDocs = difference(bulkOperations.keySet(), oldDocs.keySet());
+        Set<String> lackingDocs = CollectionUtils.difference(bulkOperations.keySet(), oldDocs.keySet());
         oldDocs.putAll(findDocuments(collection, lackingDocs));
 
         CacheChangesTracker tracker = null;
@@ -1490,14 +1486,14 @@ public class MongoDocumentStore implements DocumentStore {
             BulkRequestResult bulkResult = sendBulkRequest(collection, bulkOperations.values(), oldDocs, true);
 
             if (collection == Collection.NODES) {
-                List<NodeDocument> docsToCache = new ArrayList<NodeDocument>();
+                List<NodeDocument> docsToCache = new ArrayList<>();
                 for (UpdateOp op : filterKeys(bulkOperations, x -> bulkResult.upserts.contains(x)).values()) {
                     NodeDocument doc = Collection.NODES.newDocument(this);
                     UpdateUtils.applyChanges(doc, op);
                     docsToCache.add(doc);
                 }
 
-                for (String key : difference(bulkOperations.keySet(), bulkResult.failedUpdates)) {
+                for (String key : CollectionUtils.difference(bulkOperations.keySet(), bulkResult.failedUpdates)) {
                     T oldDoc = oldDocs.get(key);
                     if (oldDoc != null && oldDoc != NodeDocument.NULL) {
                         NodeDocument newDoc = (NodeDocument) applyChanges(collection, oldDoc, bulkOperations.get(key));
@@ -2057,14 +2053,14 @@ public class MongoDocumentStore implements DocumentStore {
     @NotNull
     @Override
     public Map<String, String> getStats() {
-        ImmutableMap.Builder<String, String> builder = ImmutableMap.builder();
-        List<MongoCollection<?>> all = ImmutableList.of(nodes, clusterNodes, settings, journal);
+        Map<String, String> builder = new HashMap<>();
+        List<MongoCollection<?>> all = List.of(nodes, clusterNodes, settings, journal);
         all.forEach(c -> toMapBuilder(builder,
                 connection.getDatabase().runCommand(
                     new BasicDBObject("collStats", c.getNamespace().getCollectionName()),
                         BasicDBObject.class),
                 c.getNamespace().getCollectionName()));
-        return builder.build();
+        return Collections.unmodifiableMap(builder);
     }
 
     long getMaxDeltaForModTimeIdxSecs() {
@@ -2326,7 +2322,7 @@ public class MongoDocumentStore implements DocumentStore {
         return handleException(ex, collection, Collections.singleton(id));
     }
 
-    private static void toMapBuilder(ImmutableMap.Builder<String, String> builder,
+    private static void toMapBuilder(Map<String, String> builder,
                                      BasicDBObject stats,
                                      String prefix) {
         stats.forEach((k, v) -> {
